源自zhangke3016/MultilevelTreeList,迁移到 AndroidX

--- a/MultilevelTreeLibrary/build.gradle
+++ b/MultilevelTreeLibrary/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
-
+    namespace 'com.bigademo.treelist'
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 24
@@ -19,8 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
 }
