--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,25 @@
 
 buildscript {
     repositories {
+        google()
+        mavenCentral()
         jcenter()
+
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven {url 'https://maven.aliyun.com/nexus/content/repositories/releases/'}
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.android.tools.build:gradle:8.4.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-    }
-}
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
