--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,61 @@
+
+
+pluginManagement {
+    repositories {
+
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+
+    }
+}
+
+buildscript {
+    ext.kotlin_version = "1.9.20"
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven {url 'https://maven.aliyun.com/nexus/content/repositories/releases/'}
+        maven { url "https://jitpack.io" }
+
+    }
+    dependencies {
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:8.4.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0'
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+
+        classpath "com.alibaba:arouter-register:1.0.2"
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven {url 'https://maven.aliyun.com/nexus/content/repositories/releases/'}
+        maven { url "https://jitpack.io" }
+
+    }
+}
+
 include ':app', ':MultilevelTreeLibrary'
