--- a/MultilevelTreeLibrary/build.gradle
+++ b/MultilevelTreeLibrary/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 34
+    buildToolsVersion "34.0.0"
     namespace 'com.bigademo.treelist'
     defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 24
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -16,10 +17,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+//    publishing {
+//        publications {
+//            // 这个mavenJava可以随便填，只是一个任务名字而已
+//            // MavenPublication必须有，这个是调用的任务类
+//            mavenJava(MavenPublication) {
+//                // 这里头是artifacts的配置信息，不填会采用默认的
+//                groupId = 'com.bigademo'
+//                artifactId = 'library'
+//                version = '2.0.0'
+//
+//                from components.java
+//            }
+//        }
+//    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 }
