remove deprecated gradle

--- a/MultilevelTreeLibrary/build.gradle
+++ b/MultilevelTreeLibrary/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
 //    publishing {
 //        publications {
 //            // 这个mavenJava可以随便填，只是一个任务名字而已
