--- a/MultilevelTreeLibrary/build.gradle
+++ b/MultilevelTreeLibrary/build.gradle
@@ -1,5 +1,7 @@
-apply plugin: 'com.android.library'
-
+plugins {
+    id 'com.android.library'
+    id 'maven-publish'
+}
 android {
     compileSdkVersion 34
     buildToolsVersion "34.0.0"
@@ -21,21 +23,22 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-//    publishing {
-//        publications {
-//            // 这个mavenJava可以随便填，只是一个任务名字而已
-//            // MavenPublication必须有，这个是调用的任务类
-//            mavenJava(MavenPublication) {
-//                // 这里头是artifacts的配置信息，不填会采用默认的
-//                groupId = 'com.bigademo'
-//                artifactId = 'library'
-//                version = '2.0.0'
-//
-//                from components.java
-//            }
-//        }
-//    }
 
+
+}
+afterEvaluate {
+    publishing {
+        publications {
+            // 这个mavenJava可以随便填，只是一个任务名字而已
+            // MavenPublication必须有，这个是调用的任务类
+            mavenJava(MavenPublication) {
+                // 这里头是artifacts的配置信息，不填会采用默认的
+                groupId = 'com.bigademo'
+                artifactId = 'library'
+                version = '2.0.0'
+            }
+        }
+    }
 }
 
 dependencies {
