--- a/MultilevelTreeLibrary/build.gradle
+++ b/MultilevelTreeLibrary/build.gradle
@@ -34,7 +34,7 @@ afterEvaluate {
             mavenJava(MavenPublication) {
                 // 这里头是artifacts的配置信息，不填会采用默认的
                 groupId = 'com.bigademo'
-                artifactId = 'library'
+                artifactId = 'MultilevelTreeLibrary'
                 version = '2.0.0'
             }
         }
