--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 34
-    buildToolsVersion "30.0.3"
+    buildToolsVersion "34.0.0"
     namespace 'com.treelist'
     defaultConfig {
         applicationId "com.treelist"
@@ -28,4 +28,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation project(':MultilevelTreeLibrary')
+
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 }
